# rugged_rover

./: .clang-format  .gitmodules  Doxyfile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: CI.yml  CI.ynl  clang-format.yml  humble-CI.yml  ros2-lint.yml
micro_ros_platform_firmware/platform/: battery_monitor.cpp  battery_monitor.hpp  battery_safety.cpp  battery_safety.hpp  config.hpp  encoder_utils.cpp  encoder_utils.hpp  error_handling.cpp  error_handling.hpp  motor_control.cpp  motor_control.hpp  msg_utils.cpp  msg_utils.hpp  platform.ino  ros_interface.cpp  ros_interface.hpp  status_led.cpp  status_led.hpp
rugged_rover_battery/: CMakeLists.txt  package.xml
rugged_rover_battery/include/rugged_rover_battery/: battery_voltage_monitor.hpp
rugged_rover_battery/src/: battery_voltage_monitor.cpp  main.cpp
rugged_rover_bootstrap/: install_pi5_ubuntu24_ros_jazzy.sh
rugged_rover_bringup/: CMakeLists.txt  package.xml
rugged_rover_bringup/config/: ekf.yaml  joy.yaml  nav2_params.yaml  slam_toolbox.yaml
rugged_rover_bringup/launch/: bringup.launch.py  d435.launch.py  ekf.launch.py  joy.launch.py  joy_debug.launch.py  nav2.launch.py  rplidar_s2.launch.py  slam.launch.py  teleop.launch.py  unity_sim.launch.py
rugged_rover_bringup/scripts/: cmd_vel_to_stamped.py
rugged_rover_control/: CMakeLists.txt  package.xml
rugged_rover_control/config/: controllers.yaml
rugged_rover_control/launch/: control.launch.py
rugged_rover_hardware_interfaces/: CMakeLists.txt  package.xml
rugged_rover_hardware_interfaces/include/rugged_rover_hardware_interfaces/sabertooth/: sabertooth_system_interface.hpp
rugged_rover_hardware_interfaces/src/sabertooth/: hardware_plugin.xml  sabertooth_system_interface.cpp
rugged_rover_hardware_interfaces/test/: test_sabertooth_interface.cpp
rugged_rover_interfaces/: CMakeLists.txt  package.xml
rugged_rover_interfaces/msg/: RoverFeedback.msg
rugged_rover_interfaces/srv/: GetBatteryVoltage.srv
rugged_rover_manager/: CMakeLists.txt  package.xml
rugged_rover_manager/config/: rover_manager.yaml
rugged_rover_manager/include/rugged_rover_manager/: rover_manager_node.hpp  rover_state.hpp
rugged_rover_manager/launch/: rover_manager.launch.py
rugged_rover_manager/src/: rover_manager_node.cpp
rugged_rover_motor_drivers/sabertooth/: CMakeLists.txt  package.xml
rugged_rover_motor_drivers/sabertooth/microcontroller/: sabertooth_driver.ino
rugged_rover_motor_drivers/sabertooth/microcontroller/sabertooth_driver/: sabertooth_driver.ino
rugged_rover_motor_drivers/sabertooth_motor_driver/: .clang-tidy  CMakeLists.txt  README.md  package.xml
rugged_rover_motor_drivers/sabertooth_motor_driver/config/: motor_driver.yml
rugged_rover_motor_drivers/sabertooth_motor_driver/include/sabertooth_motor_driver/: driver.hpp  sabertooth_driver_node.hpp
rugged_rover_motor_drivers/sabertooth_motor_driver/launch/: motor_driver.launch.py
rugged_rover_motor_drivers/sabertooth_motor_driver/microcontroller/sabertooth_driver/: sabertooth_driver.ino
rugged_rover_motor_drivers/sabertooth_motor_driver/microcontroller/teensy_code/: teensy_code.ino
rugged_rover_motor_drivers/sabertooth_motor_driver/src/: driver.cpp  main.cpp  sabertooth_driver_node.cpp
rugged_rover_motor_drivers/sabertooth_motor_driver/test/: mock_serial_device.cpp  test_driver.cpp
rugged_rover_robot_description/: CMakeLists.txt  package.xml
rugged_rover_robot_description/config/: controller_config.yaml  controller_manager.yaml  diff_drive_controller.yaml  joint_state_broadcaster.yaml  unity_controller_params.yaml
rugged_rover_robot_description/launch/: sim_rviz.launch.py  view_robot.launch.py  view_urdf.launch.py
rugged_rover_robot_description/meshes/: A4WD3-Wheel.stl
rugged_rover_robot_description/rviz/: unity_sim.rviz  view.rviz
rugged_rover_robot_description/urdf/: rugged_rover.urdf.xacro
rugged_rover_test/: CMakeLists.txt  package.xml
rugged_rover_test/src/: send_twist_command.cpp  test_joint_state_publisher.cpp
