<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rugged_rover_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="reece.j.holland@gmail.com">reece</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>rugged_rover_robot_description</depend>
  <depend>rugged_rover_control</depend>
  <depend>rugged_rover_hardware_interfaces</depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
