<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rugged_rover_hardware_interfaces</name>
  <version>0.0.0</version>
  <description>Custom ros2_control hardware interfaces for the Rugged Rover platform.</description>
  <maintainer email="reece.j.holland@gmail.com">Reece Holland</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>rugged_rover_interfaces</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
    <ros2_control plugin="rugged_rover_hardware_interfaces/hardware_plugin.xml"/>
  </export>

</package>
