<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rugged_rover_manager</name>
  <version>0.1.0</version>
  <description>Runtime mode and safety manager for the rugged rover.</description>

  <maintainer email="reece@example.com">Reece Holland</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>

  <build_depend>pkg-config</build_depend>
  <build_depend>libgpiod-dev</build_depend>
  <exec_depend>libgpiod-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>